--- a/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Index.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Index.cshtml
@@ -24,7 +24,7 @@
         <form action="@Url.Action("Search","EmployeesManagement")" method="get" class="form-inline">
             <input class="form-control mr-sm-2 btn-none" id="employeeSearch" name="employeeSearch" type="search" placeholder="Tìm kiếm nhân viên ">
             <input class="form-control mr-sm-2 btn-none" value="1" id="page" name="page" hidden>
-            <button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/searchbtn.svg" width="25" height="25" /></button>
+            <button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/loupe.svg" width="25" height="25" /></button>
         </form>
 
     </div>
