--- a/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetInfor.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetInfor.cshtml
@@ -19,18 +19,15 @@
         <h5>Ngày đăt</h5>
         <p>@Model.OrderDate</p>
     </div>
-    <div class="row px-1">
+    @*<div class="row px-1">
         <div class="col-4">
-            <h5>Trẻ em</h5>
-            <p>@Model.OrderTourDetails.First().QuantityChild</p>
+            <p>Trẻ em: @Model.OrderTourDetails.First().QuantityChild</p>
         </div>
         <div class="col-4">
-            <h5>Người lớn</h5>
-            <p>@Model.OrderTourDetails.First().QuantityAdult</p>
+            <p>Người lớn: @Model.OrderTourDetails.First().QuantityAdult</p>
         </div>
         <div class="col-4">
-            <h5>Phòng đơn</h5>
-            <p>@Model.OrderTourDetails.First().NumberRoom</p>
+            <p>Phòng đơn: @Model.OrderTourDetails.First().NumberRoom</p>
         </div>
-    </div>
+    </div>*@
 </div>
