--- a/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetOrders.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetOrders.cshtml
@@ -28,7 +28,7 @@
                     @item.OrderId
                 </td>
                 <td>
-                    @item.OrderDate.Value.ToString("MM/dd/yyyy")
+                    @item.OrderDate.Value
                 </td>
                 <td>
                     @if (item.Status == "Pending")
