--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
     </div>
 </div>
-<div class="container pt-3">
+<div class="container pt-3 px-0">
     <div>
         <div class="seemore row">
             <div class="col-6 font-weight-bold  m-0 p-0">
