--- a/TourManagement.Presentation/Views/Home/SearchTour.cshtml
+++ b/TourManagement.Presentation/Views/Home/SearchTour.cshtml
@@ -1,19 +1,21 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.Tour>
 @{
-    ViewBag.Title = "Search Tour";
+    ViewBag.Title = "TÌm tour";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="row">
-    @if (!Model.Any())
-    {
-        <div class="m-auto pt-5" style="height:550px;"><p>Không có tour với nội dung <span class="font-weight-bold">@ViewBag.MessageSearch</span> nào được tìm thấy</p></div>
-    }
-    else
-    {
-        foreach (var item in Model)
+<div class="container px-0">
+    <div class="row">
+        @if (!Model.Any())
         {
-            @Html.Partial("TourOverView", item);
+            <div class="m-auto pt-5" style="height:550px;"><p>Không có tour với nội dung <span class="font-weight-bold">@ViewBag.MessageSearch</span> nào được tìm thấy</p></div>
         }
-    }
+        else
+        {
+            foreach (var item in Model)
+            {
+                @Html.Partial("TourOverView", item);
+            }
+        }
+    </div>
 </div>
+
