--- a/TourManagement.Presentation/Views/Shared/LoginPatial.cshtml
+++ b/TourManagement.Presentation/Views/Shared/LoginPatial.cshtml
@@ -24,7 +24,7 @@
                     @if (user.Role == 2)
                     {
                         <li class="dropdown-menu-item">
-                            <a href="@Url.Action("GetOrderTour","OrderTours", new { area=""})" class="dropdown-menu-link">
+                            <a href="@Url.Action("GetMyOrders","OrderTours", new { area=""})" class="dropdown-menu-link">
                                 <div>
                                     <i class="fas fa-luggage-cart"></i>
                                 </div>
