--- a/TourManagement.Presentation/Views/Shared/TourOverView.cshtml
+++ b/TourManagement.Presentation/Views/Shared/TourOverView.cshtml
@@ -6,8 +6,9 @@
 
 <div class="col-3 pb-3 px-1">
     <div class="card tours">
-        <div class="tour-image">
+        <div class="tour-image position-relative">
             <img src="~/Content/images/tours/@listImages[0]" class="w-100 h-100" alt="@Model.Name">
+            <div class="box-positon">Từ @Model.PositionStart</div>
         </div>
         <div class="tour-detail">
             <div class="h-50 p-2 bg-light m-auto">
