--- a/TourManagement.Presentation/Areas/Admin/Views/HotelsManagement/Create.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/HotelsManagement/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TourManagement.Models.DBContext.Hotel
 
 @{
-    ViewBag.Title = "Add hotel | Let's Go";
+    ViewBag.Title = "Add hotel";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,7 +9,6 @@
 <hr />
 <form action="~/Admin/HotelsManagement/Create" method="post" class=" row form-horizontal" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
-
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="col">
@@ -24,18 +23,16 @@
         <div class="form-group">
             <label class="control-label">Content</label>
             <div>
-                <textarea class="form-control" name="Content" id="ckeditor" rows="10"></textarea>
+                <textarea class="form-control" name="Content" id="editor" rows="10"></textarea>
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label" for="ImgUrl">Image Thumbnail:</label>
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" name="Image" onchange="readURL(this)">
-                <label class="custom-file-label" for="validatedCustomFile">Choose an image</label>
-                <div><img id="FileImage" src="~/Content/images/meo.jpg" name="Image" alt="your image" class="img-thumbnail" width="100" /></div>
-                @Html.ValidationMessageFor(m => m.Image, "", new { @class = "text-danger" })
+            <label class="control-label">Select images</label>
+            <div class="row m-auto">
+                <input type="text" id="Image" name="Image" class="w-100 form-control" />
+                <input type="file" id="filesInput" name="filesInput" class="col-6" multiple required onchange="Getname()">
             </div>
         </div>
 
@@ -65,7 +62,7 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-  
+
 
         <div class="form-group">
             <div>
@@ -76,6 +73,8 @@
     </div>
 </form>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+
+@section scripts {
+    <script src="~/Scripts/ckeditor5-build-classic/ckeditor.js"></script>
+    <script src="~/Scripts/ckeditor5-build-classic/ClassicEditor.js"></script>
 }
