--- a/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/Edit.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 
@@ -25,32 +26,16 @@
         <div class="form-group">
             <label class="control-label">Position Start</label>
             <div>
-                <input type="text" class="form-control" name="PositionStart" id="PositionStart" value="@Model.PositionStart"/>
+                <input type="text" class="form-control" name="PositionStart" id="PositionStart" value="@Model.PositionStart" />
                 @Html.ValidationMessageFor(model => model.PositionStart, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label">Select more destinations</label>
-            <div>
-                @Html.DropDownList("DestinationIds", new SelectList(ViewBag.DestiantionId, "Value", "Text"), new
-                {
-                    @class = "form-control",
-                    @id = "DestinationIds",
-                    multiple = "multiple",
-                    required = "required",
-                    size = 5
-                })
-            </div>
-        </div>
-    </div>
-
-    <div class="col-6">
-        <div class="form-group">
             <label class="control-label">Select images</label>
             <div>
-                <input type="text" id="Image" name="Image" class="col-5" value="@Model.Image"/>
-                <input type="file" id="filesInput" name="filesInput" multiple required onchange="Getname()" >
+                <input type="text" id="Image" name="Image" class="w-100 form-control" value="@Model.Image" />
+                <input type="file" id="filesInput" name="filesInput" class="col-6" multiple required onchange="Getname()">
             </div>
         </div>
         <div class="row">
@@ -65,7 +50,7 @@
                 <label class="control-label">Category</label>
                 <div>
                     @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
-                   
+
                 </div>
             </div>
         </div>
@@ -73,7 +58,7 @@
             <div class="form-group col-6">
                 <label class="control-label">Time</label>
                 <div>
-                    <input type="number" name="Time" id="Time" class="form-control" min="1" value="@Model.Time"/>
+                    <input type="number" name="Time" id="Time" class="form-control" min="1" value="@Model.Time" />
                     @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -93,11 +78,32 @@
                 @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
+        
+    </div>
+
+    <div class="col-6">
+
+        <div class="form-group">
+            <label class="control-label">Select more destinations</label>
+            <div>
+                @Html.DropDownList("DestinationIds", new SelectList(ViewBag.DestiantionId, "Value", "Text"), new
+                {
+                    @class = "form-control",
+                    @id = "DestinationIds",
+                    multiple = "multiple",
+                    required = "required",
+                    size = 15
+                })
+            </div>
+        </div>
+
         <div class="row">
             <div class="form-group col-6">
                 <label class="control-label">Stop position</label>
                 <div>
-                    <input type="text" id="StopPosition" name="StopPosition" class="form-control" value="@Model.StopPosition"/>
+                    <input type="text" id="StopPosition" name="StopPosition" class="form-control" value="@Model.StopPosition" />
                     @Html.ValidationMessageFor(model => model.StopPosition, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -140,7 +146,7 @@
         <div class="form-group">
             <label class="control-label">Content</label>
             <div>
-                <textarea class="form-control" name="Content" id="editor" >@Model.Content</textarea>
+                <textarea class="form-control overflow-auto" name="Content" id="editor" >@Model.Content</textarea>
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -148,7 +154,7 @@
     <div class="form-group">
         <div>
             <input type="submit" value="Add" class="btn btn-success" />
-            <a class="btn btn-secondary" href="/Admin/ToursManagement/Index">Cancel</a>
+            <a class="btn btn-secondary" href="/Admin/ToursManagement/Index?page=1">Cancel</a>
         </div>
     </div>
 </form>
