--- a/TourManagement.Presentation/Views/Hotels/Details.cshtml
+++ b/TourManagement.Presentation/Views/Hotels/Details.cshtml
@@ -9,7 +9,7 @@
         <h4>@Model.Name</h4>
     </div>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-8 py-0" s>
             <div class="carousel-inner" style="height: 400px;">
                 <img src="~/Content/images/hotels/@Model.Image" class="d-block w-100 img-fluid" alt="...">
             </div>
@@ -22,14 +22,14 @@
                 </div>
                 <hr />
                 <div>
-                    <div class="row">
-                        <p class="col-4">Đia chỉ: </p><span>@Model.Address</span>
+                    <div class="row m-auto">
+                        <div class="col-4">Đia chỉ: </div><div class="col-8">@Model.Address</div>
                     </div>
-                    <div class="row">
-                        <p class="col-4">Điện thoại: </p><span>@Model.Phone</span>
+                    <div class="row m-auto">
+                        <div class="col-4">Điện thoại: </div><div class="col-8">@Model.Phone</div>
                     </div>
-                    <div class="row">
-                        <p class="col-4">Email:</p><span>@Model.Email.ToLower()</span>
+                    <div class="row m-auto">
+                        <div class="col-4">Email:</div><div class="col-8">@Model.Email.ToLower()</div>
                     </div>
                     <hr />
                 </div>
@@ -42,9 +42,9 @@
     </div>
     <div class="pt-4 border-top">
         <div class="py-4 border-top">
-            <h5><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h5>
-            <div>
-                <p>@Model.Content</p>
+            <h4><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h4>
+            <div id="content" class="w-100 pl-4">
+
             </div>
         </div>
         @if (Model.Rooms != null)
@@ -54,7 +54,7 @@
                 {
                     <div class="row p-3">
                         <div class="col-4">
-                            <img src="~/Content/images/hotels/room/@item.Image" height="200" width="100%"/>
+                            <img src="~/Content/images/hotels/room/@item.Image" height="200" width="100%" />
                         </div>
                         <div class="col-5">
                             <span class="font-weight-bold">@item.Name</span>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="col-3 text-center">
                             <p>Giá: @Math.Truncate(item.Price.Value).ToString("###,###,###") đ</p>
-                            <a class="nav-link btn btn-outline-secondary" href="@Url.Action("ConfirmContact", "Hotels")" >Liên hệ</a>
+                            <a class="nav-link btn btn-outline-secondary" href="@Url.Action("ConfirmContact", "Hotels")">Liên hệ</a>
                         </div>
                     </div>
                 }
@@ -79,3 +79,11 @@
 
     </div>
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        var html = '@Model.Content';
+        var content = document.getElementById('content');
+        content.innerHTML = strip(html);
+    </script>
+}
