--- a/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
+++ b/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.Tour>
 
 @{
-    ViewBag.Title = "List Tour";
+    ViewBag.Title = "Du lịch trong nước";
 
     int totalPage = @ViewBag.TotalPage;
     int pageRange = 3;
